--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#541B0B",
-        "titleBar.activeBackground": "#762510",
+        "activityBar.background": "#277fba",
+        "titleBar.activeBackground": "#072c48",
         "titleBar.activeForeground": "#FEFCFB"
     },
     "json.schemas": []
