--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#541B0B",
-        "titleBar.activeBackground": "#762510",
-        "titleBar.activeForeground": "#FEFCFB"
+        "activityBar.background": "#2b35c6",
+        "titleBar.activeBackground": "#2b35c6",
+        "titleBar.activeForeground": "#F4FCF4"
     },
     "json.schemas": []
 }
