--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#277fba",
-        "titleBar.activeBackground": "#072c48",
-        "titleBar.activeForeground": "#FEFCFB"
+        "activityBar.background": "#228B22",
+        "titleBar.activeBackground": "#2CB52C",
+        "titleBar.activeForeground": "#F4FCF4"
     },
     "json.schemas": []
 }
