--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
+# PORT=3055
+# DB_HOST=173.201.253.251
+# DB_USER=admin
+# DB_PASS=h5MFu8ZVsRrw8PT
+# DB_NAME=project
+# JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
+
+
 PORT=3055
-DB_HOST=173.201.253.251
-DB_USER=admin
-DB_PASS=h5MFu8ZVsRrw8PT
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=root
 DB_NAME=project
 JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
