Leo 0804 1445 merge prepare 加入購物車 ISBN讀不到版本

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#ff9900",
-        "titleBar.activeBackground": "#a17b41",
+        "activityBar.background": "#9600d1",
+        "titleBar.activeBackground": "#63008a",
         "titleBar.activeForeground": "#F4FCF4"
     },
     "json.schemas": []
