--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#9600d1",
-        "titleBar.activeBackground": "#63008a",
+        "activityBar.background": "#0b00ac",
+        "titleBar.activeBackground": "#6300d5",
         "titleBar.activeForeground": "#F4FCF4"
     },
     "json.schemas": []
