--- a/.env
+++ b/.env
@@ -6,6 +6,14 @@ DB_NAME=project
 JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
 
 
+# # linepay用
+# LINE_PAY_CHANNEL_ID=2000249397
+# LINE_PAY_CHANNEL_SECRET=070b51fa4d75199ab0645e5db31fa015
+
+# # linepay對react
+# REACT_REDIRECT_CONFIRM_URL=http://localhost:3000/pay-confirm
+# REACT_REDIRECT_CANCEL_URL=http://localhost:3000/pay-cancel
+
 # PORT=3055
 # DB_HOST=localhost
 # DB_USER=root
