--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-session": "^1.17.3",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.1",
+    "line-pay": "^1.0.16",
+    "line-pay-merchant": "^0.9.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
