Leo 0809 1330 merge prepare

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#6e437f",
-        "titleBar.activeBackground": "#814298",
+        "activityBar.background": "#e80d02",
+        "titleBar.activeBackground": "#a30101",
         "titleBar.activeForeground": "#F4FCF4"
     },
     "json.schemas": []
