--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#7c92da",
-        "titleBar.activeBackground": "#6358bc",
+        "activityBar.background": "#228B22",
+        "titleBar.activeBackground": "#2CB52C",
         "titleBar.activeForeground": "#F4FCF4"
     },
     "json.schemas": []
