--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT=3055
-DB_HOST=173.201.253.251
-DB_USER=admin
-DB_PASS=h5MFu8ZVsRrw8PT
-DB_NAME=project
-JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
+# PORT=3055
+# DB_HOST=173.201.253.251
+# DB_USER=admin
+# DB_PASS=h5MFu8ZVsRrw8PT
+# DB_NAME=project
+# JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
 
 
 # linepay用
@@ -20,3 +20,10 @@ REACT_REDIRECT_CANCEL_URL=http://localhost:3000/order/productcheck
 # DB_PASS=root
 # DB_NAME=project
 # JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
+
+PORT=3055
+DB_HOST=192.168.24.5
+DB_USER=5th
+DB_PASS=5th
+DB_NAME=project
+JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
