--- a/.env
+++ b/.env
@@ -1,9 +1,19 @@
+# helen 遠端
+# PORT=3055
+# DB_HOST=173.201.253.251
+# DB_USER=admin
+# DB_PASS=h5MFu8ZVsRrw8PT
+# DB_NAME=project
+# JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
+
+#本機
 PORT=3055
-DB_HOST=173.201.253.251
-DB_USER=admin
-DB_PASS=h5MFu8ZVsRrw8PT
+DB_HOST=localhost
+DB_USER=Emer
+DB_PASS=0724
 DB_NAME=project
 JWT_SECRET=sdgsdfds54fs6d5g4s6gTT
+
 
 
 # linepay用
